# weniv_world

./: .gitignore  CNAME  LICENSE.txt  README.md  decorator_test_file.html  index.html  main.py  obfuscate_file.py  package-lock.json  package.json  pyproject.toml  test.html  test_api.py  test_final_integration.py  test_game_engine.py  three.html  threejs.html  webpack.config.js
.github/workflows/: main.yml
apps/api/: urls.py  views.py
apps/core/: urls.py  views.py
apps/game/: admin.py  models.py  urls.py
apps/progress/: admin.py  apps.py  models.py
apps/story/: admin.py  apps.py  models.py  urls.py
assets/css/: _animations.scss  _main.scss  _markdown.scss  _modules.scss  _notebook.scss  _reset.scss  _story.scss  _variables.scss  _world.scss  main.css  reset.css  style.css  style.css.map  style.scss  variable.css
assets/js/: analytics.js  editor.js  event.js  parser.js  question.json  report.js  resizer.js  setStory.js  slider.js  three.js  utils.js
assets/py/: built_in_functions.py  character.py  coordinate.py  error.py  event.py  item.py  map.py  mob.py  modules.py  script.py  solution.py  wall.py
assets/pyscript/: pyscript.js  pyscript_latest.js
claude/: 다음 업데이트 작업.md  요구사항1.md  요구사항2.md  요구사항3.md  요구사항4.md
config/: urls.py
config/settings/: base.py  development.py  production.py
css/: style.css
static/css/: _main.scss  _markdown.scss  style.css
static/js/: analytics.js  event.js  parser.js  report.js  setStory.js  three.js
static/py/: character.py  item.py  mob.py  modules.py
staticfiles/js/: three.js  (+4 more)
templates/: base.html  index.html
(+67 files in other folders)
